Adding manual sprite mixin back in
Just incase but it's better to use the auto sprite

--- a/assets/sass/00-config-files/sprite-sheets/SHEET-LIST.scss
+++ b/assets/sass/00-config-files/sprite-sheets/SHEET-LIST.scss
@@ -28,3 +28,7 @@ $spritesheets: (
 
 //creates a list of all sheet names for both retina and non-retina sprites
 $all_sheet_names: map_keys(map_merge(map-get($spritesheets, retina-sheets), map-get($spritesheets, standard-sheets)));
+
+//variables for the manual sprite mixin
+$manual_sprite: url(../images/design/manual-sprite.png);
+$manual_sprite2x: url(../images/design/manual-sprite@2x.png);
