--- a/assets/sass/swordion-only.scss
+++ b/assets/sass/swordion-only.scss
@@ -14,6 +14,10 @@
 	};
 }
 
+.hyphenTest {
+	@include M-hyphenate;
+	width: 100px;
+}
 
 #equalTest {
 	div { border: 20px solid green; width: 50%; background: #FFB2B2; float: left; }
