--- a/assets/sass/02-base/03-columns.scss
+++ b/assets/sass/02-base/03-columns.scss
@@ -1,27 +1,149 @@
-/*================================================*\
-	COLUMNS STYLING FILE
-----------------------------------------------------
-	This file holds all the classes that handle
-	general site structure. A three column module
-	would have the "column" and "thirds"
-	class on it
-\*================================================*/
+//================================================*\
+/*	COLUMNS STYLING FILE						*/
+//----------------------------------------------------
+//	This file holds all the classes that handle
+//	general site structure.
+//================================================*/
 
 //The styling for the central box that holds the whole page content
 .container { margin:0 auto; max-width:$bp-tablet; }
 
 
+//================================================*\
+/*				COLUMN WIDTHS						*/
+//----------------------------------------------------
+//	Quickly and easily apply standard percentage
+//	widths to columns based on fractions.
+//
+//	step 1: give container the width modifier class.
+//			eg: columns--thirds
+//	step 2: give extra wide columns span classes
+//			eg. columns-col--span2
+//
+//	EXAMPLE HTML:
+//	<ul class="columns--floated columns--thirds">
+//		<li class="columns-col">Column is 1/3 wide on desktop</li>
+//		<li class="columns-col columns-col--span2">column is 2/3 wide on desktop</li>
+//	</ul>
+//================================================*/
+	$colWidths: (
+		class: full,
+		breaks: false,
+	), (
+		class: halves,
+		breaks: (
+			$bp-mobile 100%,
+		),
+	), (
+		class: thirds,
+		breaks: (
+			$bp-mobile 100%,
+		),
+	), (
+		class: quarters,
+		breaks: (
+			$bp-tablet 50%,
+			$bp-mobile 100%,
+		),
+	), (
+		class: fiths,
+		breaks: (
+			$bp-phablet 33.33%,
+			$bp-mobile 50%,
+			$bp-small 100%,
+		),
+	), (
+		class: sixths,
+		breaks:	(
+			$bp-phablet 33.33%,
+			$bp-mobile 50%,
+			$bp-small 100%,
+		),
+	);
+
+	//setting up variables for deTabelisation
+
+	$deTabelise--mobile: ();
+	$deTabelise--phablet: ();
+	$deTabelise--tablet: ();
+
+
+	@for $i from 1 through length($colWidths) {
+		$array: nth($colWidths, $i);
+		$class: map-get($array, class);
+		$breaks: map-get($array, breaks);
+
+		.columns--#{$class} .columns-col {
+			width: percentage(1/$i);
+
+			@if ($i > 2){
+				@for $x from 2 through ($i - 1) {
+					&--span#{$x} { width: percentage($x/$i); }
+				}
+			}
+
+			@if ($breaks != false) {
+				@for $y from 1 through length($breaks) {
+					$breakData : nth($breaks, $y);
+					$device : nth($breakData, 1);
+					$width : nth($breakData, 2);
+					@include M-mq(max,$device){
+						width: $width;
+					}
+				}
+			}
+		}
+		//de-Tabelise for halves and thirds
+		@if ($i <= 2 and $i < 4){
+			$deTabelise--mobile: append($deTabelise--mobile, '.columns--' + $class + '.columns--tabular .columns-col',comma);
+		}
+		//de-Tabelise for quarters
+		@if ($i == 4){
+			$deTabelise--tablet: append($deTabelise--tablet, '.columns--' + $class + '.columns--tabular .columns-col',comma);
+		}
+		//de-Tabelise for fiths and higher
+		@if ($i >= 5){
+			$deTabelise--phablet: append($deTabelise--phablet, '.columns--' + $class + '.columns--tabular .columns-col',comma);
+		}
+	}
+
+	$deTabelisers :
+		$deTabelise--tablet $bp-tablet,
+		$deTabelise--phablet $bp-phablet,
+		$deTabelise--mobile $bp-mobile,
+	;
+
+/*change to floated format at certain screen sizes for certain column widths if set to tabular style*/
+@for $i from 1 through length($deTabelisers) {
+	$array: nth($deTabelisers,$i);
+	$list: nth($array,1);
+	$res: nth($array,2);
+
+	@include M-mq(max,$res){
+		#{$list} {
+			display: block;
+			float: left;
+		}
+	}
+}
+
+
+
+
 .columns {
-/*================================================*\
-	FLOATED COLUMNS
-----------------------------------------------------
-	These columns all share the same repeating
-	width. They will not share the same heights
-	without the help of js.
-	They will wrap.
-\*================================================*/
+//================================================*\
+//*				FLOATED COLUMNS					*/
+//----------------------------------------------------
+//	These columns all share the same repeating
+//	width. They will not share the same heights
+//	without the help of js.
+//	They will wrap.
+//
+//	Apply floated column styling with the
+//	columns--floated class
+//================================================*/
 	&--floated { @extend %clearfix; @extend %noDots;
-		.column { float: left; padding: 0; margin: 0;
+		.columns-col { float: left; padding: 0; margin: 0;
 			&-padding { padding: 0 5%; }
 
 			@include M-mq(max,$bp-mobile){
@@ -34,14 +156,18 @@
 	}
 
 
-/*================================================*\
-	TABULAR COLUMNS
-----------------------------------------------------
-	These columns act like table cells. They will
-	all be the same height but will vary in width
-	based on the content inside them. They will
-	not wrap.
-\*================================================*/
+//================================================*\
+//*				TABULAR COLUMNS					*/
+//----------------------------------------------------
+//	These columns act like table cells. They will
+//	all be the same height but will vary in width
+//	based on the content inside them (unless a width class is provided).
+//	They will not wrap on Desktop.
+//	They switch to floated style on tablet so they can wrap.
+//
+//	Apply table column styling with the
+//	columns--tabular class
+//================================================*/
 	&--tabular {
 		display: table;
 		width: 100%;
@@ -51,105 +177,19 @@
 			@include M-after { clear: both; }
 		}
 
-		.column {
+		.columns-col {
 			display: table-cell;
 			@include M-mq(max,$bp-mobile){
-				width: 100%;
+				//if mobile, change to floated format
 				display: block;
 				float: left;
 			}
-
 			&--vAlign { vertical-align: middle; }
+
+			//overides width class
+			//WARNING: will require extra responsive styling
+			&--autoWidth { width: auto; }
 		}
 	}
-
-/*================================================*\
-	COLUMN WIDTHS
-----------------------------------------------------
-	Quickly and easily apply standard percentage
-	widths to columns based on fractions
-\*================================================*/
-	$colWidths: (
-		class: full,
-		breaks: false,
-	), (
-		class: halves,
-		breaks: (
-			(
-				bp:$bp-mobile,
-				width: 100%,
-			),
-		)
-	), (
-		class: thirds,
-		breaks: (
-			$bp-mobile 100%,
-		)
-	), (
-		class: quarters,
-		breaks: (
-			(
-				bp: $bp-tablet,
-				width: 50%,
-			), (
-				bp:$bp-mobile,
-				width: 100%,
-			),
-		),
-	), (
-		class: fiths,
-		breaks: (
-			(
-				bp: $bp-phablet,
-				width: 33.33%,
-			), (
-				bp:$bp-mobile,
-				width: 50%,
-			), (
-				bp: $bp-small,
-				width: 100%,
-			),
-		),
-	), (
-		class: sixths,
-		breaks:	(
-			(
-				bp: $bp-phablet,
-				width: 33.33%,
-			), (
-				bp:$bp-mobile,
-				width: 50%,
-			), (
-				bp: $bp-small,
-				width: 100%,
-			),
-		),
-	);
-
-	@for $i from 1 through length($colWidths) {
-		$array: nth($colWidths, $i);
-		$class: map-get($array, class);
-		$breaks: nth(map-get($array, breaks),1);
-
-		&--#{$class} .column {
-			width: percentage(1/$i);
-
-			@if ($i > 2){
-				@for $x from 2 through ($i - 1) {
-					&--span#{$x} { width: percentage($x/$i); }
-				}
-			}
-
-			@if ($breaks != false) {
-				@debug $breaks;
-				@for $y from 1 through length(nth($breaks,1)) {
-					$device : nth($breaks, 1);
-					$width : nth($breaks, 2);
-					@include M-mq(max,$device){ width: $width }
-				}
-			}
-		}
-	}
-
-
 }
+
