Fiths styling improvement
tested and fixed this time

--- a/assets/sass/02-base/03-columns.scss
+++ b/assets/sass/02-base/03-columns.scss
@@ -154,8 +154,8 @@
 		}
 	}
 	@include M-mq(max,$bp-phablet){
-		&--fiths { text-align: center;
-			.columns--col { display: inline-block; float: none; }
+		&--fiths[class*="columns"] { text-align: center;
+			.columns-col { display: inline-block; float: none; }
 		}
 	}
 
