--- a/assets/sass/import-maps/content-modules-map.scss
+++ b/assets/sass/import-maps/content-modules-map.scss
@@ -1,6 +1,7 @@
 // generated with grunt-sass-globbing
 
 @import "../04-content-modules/alerts";
+@import "../04-content-modules/demo";
 @import "../04-content-modules/download-links";
 @import "../04-content-modules/forms";
 @import "../04-content-modules/lightbox";
