--- a/assets/sass/01-global-mixins/_shortcuts.scss
+++ b/assets/sass/01-global-mixins/_shortcuts.scss
@@ -47,19 +47,25 @@
 //Browser compatibility shortcuts//
 //////////////////////////////////
 
-//Allows you to use rem fontsize instead of ems (much easier to develop with)
-//font size given to mixin in pixels, mixin converts it
-@mixin M-font-size($sizeValue) {
-	font-size: $sizeValue + px; //fallback for browsers that don't support REM
-	@if ($lt-ie9 == false){
-		font-size: ($sizeValue / 10) + rem;//only renders rem in modern style sheet
-	}
-}
-
+//Allows you to use rem line-height instead of ems (much easier to develop with)
+//line-height is given to mixin in pixels, mixin converts it
 @mixin M-line-height($sizeValue) {
 	line-height: $sizeValue + px; //fallback for browsers that don't support REM
 	@if ($lt-ie9 == false){
 		line-height: ($sizeValue / 10) + rem;//only renders rem in modern style sheet
+	}
+}
+
+//Allows you to use rem fontsize instead of ems (much easier to develop with)
+//font size given to mixin in pixels, mixin converts it
+@mixin M-font-size($sizeValue, $lineHeight: $sizeValue * 1.3) {
+	font-size: $sizeValue + px; //fallback for browsers that don't support REM
+	@if ($lineHeight != false){
+		@include M-line-height($lineHeight);
+	}
+
+	@if ($lt-ie9 == false){
+		font-size: ($sizeValue / 10) + rem;//only renders rem in modern style sheet
 	}
 }
 
