--- a/assets/sass/02-themes.scss
+++ b/assets/sass/02-themes.scss
@@ -29,7 +29,7 @@ $themes: (
 			border: 2px solid #ccc,
 		),
 		header: (
-			background: #000,
+			background: #042A38,
 			color: #E0E0E0,
 		),
 		footer: (
@@ -40,17 +40,19 @@ $themes: (
 
 	light: (
 		nav: (
-			background: #fff,
+			background: #EDFF91,
 			color: #000,
 			border: 2px dotted #000,
 		),
 		header: (
-			background: #fff,
+			background: #CBFFB6,
 			color: #000,
+			border: 2px dotted green,
 		),
 		footer: (
-			background: #fff,
+			background: #FFCDEE,
 			color: #000,
+			border: 2px dotted red,
 		),
 	),
 );
@@ -69,7 +71,7 @@ $themes: (
 	}
 
 	//optional: animate theme transitions :)
-	[class^="themed-"] { @include M-animate; }
+	[class^="themed-"], [class*=" themed-"]  { @include M-animate; }
 }
 
 
